objects/SWIFT_Application_Log__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Component_Id__c</fullName>
        <label>Apex Component Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Component_Name__c</fullName>
        <label>Apex Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Level__c</fullName>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error/Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Payload__c</fullName>
        <label>Integration_Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this log will be auto retry by time based workflow + trigger</description>
        <label>Is Auto Retry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <description>Message ID of the Inbound Web Service request from the interfacing system.</description>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Status__c</fullName>
        <label>Retry Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N.A.</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Apex_Component_Id__c ,  Apex_Component_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Before_Created_Date__c</fullName>
        <formula>NOW() -  0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Before Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trigger_Exception_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Exception Email</label>
        <type>Checkbox</type>
    </fields>
    <label>SWIFT Application Log</label>
    <listViews>
        <fullName>Auto_Retry_Queue</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Retry_Status__c</columns>
        <columns>Source__c</columns>
        <columns>Method__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Auto_Retry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Auto Retry Queue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DRR</fullName>
        <columns>NAME</columns>
        <columns>Debug_Level__c</columns>
        <columns>Message_ID__c</columns>
        <columns>Integration_Payload__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>equals</operation>
            <value>MRSApprovalService</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>WS DRR [MDP]</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Layer_Chip_Deselection</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>MRSDeselectionService</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Layer Chip Deselection</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MRS_CAD_Revamp_WS</fullName>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>MRSCAD</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>equals</operation>
            <value>handleRequest</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>WS CAD [LG/ORC/RJV/SD/MR]</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MRS_PLM_DRWR</fullName>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>MRSPLMDRWServiceHandler</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>MRS PLM DRWR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PTRF_DotNetService</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Method__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>PTRF_DotNetService</value>
        </filters>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>PTRF DotNetService</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>PTRF_DotNetService</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SWIFT_OracleDB_ResponseServic</fullName>
        <columns>NAME</columns>
        <columns>Message_ID__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Component_Name__c</field>
            <operation>contains</operation>
            <value>SWIFT_OracleDB_ResponseService</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SWIFT_OracleDB_ResponseService</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Sequence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWIFT Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>